--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "url": "git+https://github.com/vicapow/gh-site-template.git",
-  "homepage": "http://vicapow.github.io/gh-site-template",
+  "homepage": "https://hotdogswithoutbuns.com",
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "autoprefixer": "^10.4.16",
     "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.4",
     "gh-pages": "^6.0.0",
@@ -20,6 +21,7 @@
     "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
     "update-browserslist-db": "^1.0.13",
+    "url-loader": "^4.1.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
